force-app/relationship-map/objects/RelationshipMapNode__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>AccountAccountRelationship__c</fullName>
                <label>Account Account Relationship</label>
            </value>
            <value>
                <fullName>AccountContactRelation</fullName>
                <label>Account Contact Relationship</label>
            </value>
            <value>
                <fullName>Alliance__c</fullName>
                <label>Alliance</label>
            </value>
            <value>
                <fullName>Associated_Account__c</fullName>
                <label>Associated Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>ContactContactRelationship__c</fullName>
                <label>Contact Contact Relationship</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>OpportunityContactRole</fullName>
                <label>Opportunity Contact Role</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>