force-app/relationship-map/objects/RelationshipMapNode__c/fields/ParentNodeRelationshipFieldName__c.field-meta.xml
<CustomField>
    <fullName>ParentNodeRelationshipFieldName__c</fullName>
    <inlineHelpText>Specify the Child Relationship Name for the current node. F.e. Contacts, Opportunities, myCustomObjects__r</inlineHelpText>
    <label>Parent Node Relationship Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>