force-app/relationship-map/objects/RelationshipMapNode__c/fields/ParentRelationshipMapNodeGroup__c.field-meta.xml
<CustomField>
    <fullName>ParentRelationshipMapNodeGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Relationship Map Node Group</label>
    <referenceTo>RelationshipMapNodeGroup__c</referenceTo>
    <relationshipLabel>Relationship Map Nodes</relationshipLabel>
    <relationshipName>RelationshipMapNodes</relationshipName>
    <type>Lookup</type>
</CustomField>