force-app/relationship-map/objects/RelationshipMapNode__c/validationRules/ParentNodeRelationshipFieldName.validationRule-meta.xml
<ValidationRule>
    <fullName>ParentNodeRelationshipFieldName</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    ISBLANK( ParentNodeRelationshipFieldName__c ),
    NOT( 
        ISBLANK(ParentRelationshipMapNodeGroup__c)
    )
)</errorConditionFormula>
    <errorDisplayField>ParentNodeRelationshipFieldName__c</errorDisplayField>
    <errorMessage>The Parent Node Relationship Field Name field should be populated for all child nodes</errorMessage>
</ValidationRule>